Fixed alignment problems on homepage

--- a/TheSink-Style.css
+++ b/TheSink-Style.css
@@ -105,7 +105,7 @@ a{
 .side {
 	width: 2%;
 	padding: 5px;
-	min-height: 680px;
+	min-height: 700px;
 	background-color: #76e5bd;
 }
 
